# tome

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json  tome_session_context.py  tome_sync_reminder.py
quartz-plugins/board/: .gitignore  README.md  package-lock.json  package.json  tsup.config.ts
quartz-plugins/board/src/: index.ts  pageType.ts  tasks.ts
quartz-plugins/board/types/: globals.d.ts
quartz-plugins/edit-button/: README.md  package-lock.json  package.json  tsup.config.ts
quartz-plugins/edit-button/src/: index.ts
scripts/: setup_quartz.py  tome  tome.py  tome_lint.py  wiki_search.py
skills/capture/: SKILL.md
skills/ingest/: SKILL.md
skills/pickup-task/: SKILL.md
skills/query/: SKILL.md
skills/retrospect/: SKILL.md
skills/write-a-plan/: SKILL.md
src/tome_cli/: cli.py  lint.py  quartz_setup.py  search.py  serve.py
src/tome_cli/frontend/: app.js  index.html  merge.js  (+2 more)
templates/: SCHEMA.md  conventions.toml  quartz.config.yaml  quartz.lock.json  vault.gitignore
tests/: conftest.py  test_archive.py  test_conflict.py  test_doctor.py  test_encoding.py  test_git_author.py  test_hooks.py  test_hub_plans.py  test_inbox.py  test_index.py  test_init.py  test_lifecycle.py  test_lint.py  test_log.py  test_new_with_task.py  test_ops_profile.py  test_prime.py  test_root_resolution.py  test_search.py  test_search_and_rm.py  test_serve.py  test_shims.py  test_start_done.py  test_sync.py  test_sync_race.py  test_sync_scoped.py  test_task.py
(+11 files in other folders)
